// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResevoirService should be able to get aggregate data for tokens 1`] = `
[
  {
    "contractAddress": "0xBC4CA0EdA7647A8aB7C2061c2E118A18a936f13D",
    "currentOwner": {
      "owners": [
        {
          "address": "0x8ad272ac86c6c88683d9a60eb8ed57e6c304bb0c",
          "ownership": {
            "floorAskPrice": null,
            "onSaleCount": "0",
            "tokenCount": "1",
            "topBidValue": 1.146,
            "totalBidValue": 1.146,
          },
        },
      ],
    },
    "highestBid": {
      "contract": "0xbc4ca0eda7647a8ab7c2061c2e118a18a936f13d",
      "createdAt": "2022-12-12T16:17:22.130Z",
      "criteria": {
        "data": {
          "attribute": {
            "key": "Hat",
            "value": "Trippy Captain's Hat",
          },
          "collection": {
            "id": "0xbc4ca0eda7647a8ab7c2061c2e118a18a936f13d",
          },
        },
        "kind": "attribute",
      },
      "expiration": 1670907540,
      "feeBps": 500,
      "feeBreakdown": [
        {
          "bps": 250,
          "kind": "marketplace",
          "recipient": "0x0000a26b00c1f0df003000390027140000faa719",
        },
        {
          "bps": 250,
          "kind": "royalty",
          "recipient": "0xa858ddc0445d8131dac4d1de01f834ffcba52ef1",
        },
      ],
      "id": "0xe0ad14e5b1c7458691b4ff367af42dba79aabb490a61d9f43391871a443c91f4",
      "isReservoir": null,
      "kind": "seaport",
      "maker": "0xd87051c7b10ea48da69f91395419774572cc197b",
      "price": {
        "amount": {
          "decimal": 77.5,
          "native": 77.5,
          "raw": "77500001000000000000",
          "usd": 98123.78357,
        },
        "currency": {
          "contract": "0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2",
          "decimals": 18,
          "name": "Wrapped Ether",
          "symbol": "WETH",
        },
        "netAmount": {
          "decimal": 73.625,
          "native": 73.625,
          "raw": "73625000950000000000",
          "usd": 93217.59439,
        },
      },
      "quantityFilled": 0,
      "quantityRemaining": 1,
      "side": "buy",
      "source": {
        "domain": "opensea.io",
        "icon": "https://raw.githubusercontent.com/reservoirprotocol/indexer/v5/src/models/sources/opensea-logo.svg",
        "id": "0x5b3256965e7c3cf26e11fcaf296dfc8807c01073",
        "name": "OpenSea",
        "url": "https://opensea.io/assets/0xbc4ca0eda7647a8ab7c2061c2e118a18a936f13d/1860",
      },
      "status": "active",
      "taker": "0x0000000000000000000000000000000000000000",
      "tokenSetId": "list:0xbc4ca0eda7647a8ab7c2061c2e118a18a936f13d:0x3d6a1badc01618042d2de564484f828203403ee62cb3b17f9aeb0b5695e16db9",
      "tokenSetSchemaHash": "0x7d5bebc9bfbf42313d20ee45620b6dc2c11278b042b2ef2c20e5e20dbfa19f09",
      "updatedAt": "2022-12-12T16:17:22.130Z",
      "validFrom": 1670861841,
      "validUntil": 1670907540,
    },
    "lastSale": {
      "amount": "1",
      "batchIndex": 1,
      "block": 12665954,
      "fillSource": "opensea.io",
      "from": "0x34805e6a3796fb04e82183667a78c2f7bff29170",
      "id": "96d74f48dcd2896e964193bc93889d3ef25ed2b9868a046c1213ba903f8d5386",
      "logIndex": 262,
      "orderId": "0xa4964f4ffa879eb9a53b02f45481b0fafc900c045cf9303560e2eb4c4b7d1c2e",
      "orderKind": "wyvern-v2",
      "orderSide": "ask",
      "orderSource": "opensea.io",
      "price": {
        "amount": {
          "decimal": 12,
          "native": 12,
          "raw": "12000000000000000000",
          "usd": 26778.65178,
        },
        "currency": {
          "contract": "0x0000000000000000000000000000000000000000",
          "decimals": 18,
          "name": "Ether",
          "symbol": "ETH",
        },
      },
      "saleId": "2193ca1b945c46a52d7c16a1eed6beed462be235a50dc53ec6c23a0d71609057",
      "timestamp": 1624121167,
      "to": "0x8ad272ac86c6c88683d9a60eb8ed57e6c304bb0c",
      "token": {
        "collection": {
          "id": null,
          "name": null,
        },
        "contract": "0xbc4ca0eda7647a8ab7c2061c2e118a18a936f13d",
        "image": null,
        "name": null,
        "tokenId": "1860",
      },
      "txHash": "0x7cbbb6da83bf56b8efd02df9242cb024bd68252cc52b1e9c7daf870d5d46ec14",
      "washTradingScore": 1,
    },
    "lowestListing": undefined,
    "metadata": {
      "attributes": [
        {
          "floorAskPrice": 67.8469,
          "key": "Background",
          "onSaleCount": 69,
          "tokenCount": 1243,
          "topBidValue": null,
          "value": "Army Green",
        },
        {
          "floorAskPrice": 67.89,
          "key": "Mouth",
          "onSaleCount": 30,
          "tokenCount": 505,
          "topBidValue": null,
          "value": "Dumbfounded",
        },
        {
          "floorAskPrice": 72.8867,
          "key": "Eyes",
          "onSaleCount": 14,
          "tokenCount": 333,
          "topBidValue": null,
          "value": "Eyepatch",
        },
        {
          "floorAskPrice": 67.89,
          "key": "Fur",
          "onSaleCount": 37,
          "tokenCount": 636,
          "topBidValue": null,
          "value": "Cream",
        },
        {
          "floorAskPrice": 250,
          "key": "Hat",
          "onSaleCount": 2,
          "tokenCount": 65,
          "topBidValue": 73.625,
          "value": "Trippy Captain's Hat",
        },
        {
          "floorAskPrice": 67.89,
          "key": "Trait Count",
          "onSaleCount": 149,
          "tokenCount": 2540,
          "topBidValue": null,
          "value": "5",
        },
      ],
      "collection": {
        "id": "0xbc4ca0eda7647a8ab7c2061c2e118a18a936f13d",
        "image": "https://api.reservoir.tools/assets/v1?asset=d13dd00e722beffaf6c818fc35b7e75aba548cc4b935f736af3635e348b6a2d9c8f5ecb91749e3d0db1afe2c564e23f79f112c4d443d8512b276961756757bf042663729dcf833bdef4bc2ebbba9a1f6449356a2812f60ca5cd147e3968cdb26da731b785da2bddddc77ccd728e7e17367dd1418d4f7468049b3d378d0243c55058ed9feecb44e991ea6b299d1f7ae6c",
        "name": "Bored Ape Yacht Club",
        "slug": "boredapeyachtclub",
      },
      "contract": "0xbc4ca0eda7647a8ab7c2061c2e118a18a936f13d",
      "description": null,
      "image": "https://api.reservoir.tools/assets/v1?asset=d13dd00e722beffaf6c818fc35b7e75a802539bb38ece5cdd75ce66c0789f858428e72bdf08ebf6bb989d44c9daff0dc1bc517ecd4c3acb0db26c105ced189c018d8bcc709fac46ee4d01882be3bdce6b942e393ff65e45bb0673e3ee39e3fa1dc8a64b7c687b804fa236be756880b3cc0693ae6a55db45876142e68063a670423c5e4198f99eda3f3b783c3322e8c56",
      "isFlagged": false,
      "kind": "erc721",
      "lastBuy": {
        "timestamp": null,
        "value": null,
      },
      "lastFlagChange": null,
      "lastFlagUpdate": "2022-12-12T19:34:10.581Z",
      "lastSell": {
        "timestamp": null,
        "value": null,
      },
      "media": null,
      "name": null,
      "owner": "0x8ad272ac86c6c88683d9a60eb8ed57e6c304bb0c",
      "rarity": 75.195,
      "rarityRank": 2356,
      "tokenId": "1860",
    },
    "tokenId": 1860,
  },
  {
    "contractAddress": "0x09233d553058c2F42ba751C87816a8E9FaE7Ef10",
    "currentOwner": {
      "owners": [
        {
          "address": "0x5ce5b3cf78831dbbd1f63aabcb1757640ec6f84e",
          "ownership": {
            "floorAskPrice": 1.65,
            "onSaleCount": "1",
            "tokenCount": "1",
            "topBidValue": null,
            "totalBidValue": null,
          },
        },
      ],
    },
    "highestBid": {
      "contract": "0x09233d553058c2f42ba751c87816a8e9fae7ef10",
      "createdAt": "2022-12-12T23:19:53.398Z",
      "criteria": {
        "data": {
          "attribute": {
            "key": "Faction",
            "value": "Mutant",
          },
          "collection": {
            "id": "0x09233d553058c2f42ba751c87816a8e9fae7ef10",
          },
        },
        "kind": "attribute",
      },
      "expiration": 1670888879,
      "feeBps": 1000,
      "feeBreakdown": [
        {
          "bps": 250,
          "kind": "marketplace",
          "recipient": "0x0000a26b00c1f0df003000390027140000faa719",
        },
        {
          "bps": 750,
          "kind": "royalty",
          "recipient": "0x9a7a0670a66a6efe1a15b97f3dc0f8f47d7b11c3",
        },
      ],
      "id": "0x1d5979b92b7fa0c8687a6cc2a112413a41631dc7f552e551a70f16569f3ed5ad",
      "isReservoir": null,
      "kind": "seaport",
      "maker": "0xe4c7cdd3f630404f8dbdcb2ef7bf4f22291e7697",
      "price": {
        "amount": {
          "decimal": 0.8706,
          "native": 0.8706,
          "raw": "870600000000000000",
          "usd": 1102.27826,
        },
        "currency": {
          "contract": "0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2",
          "decimals": 18,
          "name": "Wrapped Ether",
          "symbol": "WETH",
        },
        "netAmount": {
          "decimal": 0.78354,
          "native": 0.78354,
          "raw": "783540000000000000",
          "usd": 992.05043,
        },
      },
      "quantityFilled": 0,
      "quantityRemaining": 1,
      "side": "buy",
      "source": {
        "domain": "opensea.io",
        "icon": "https://raw.githubusercontent.com/reservoirprotocol/indexer/v5/src/models/sources/opensea-logo.svg",
        "id": "0x5b3256965e7c3cf26e11fcaf296dfc8807c01073",
        "name": "OpenSea",
        "url": "https://opensea.io/assets/0x09233d553058c2f42ba751c87816a8e9fae7ef10/4329",
      },
      "status": "active",
      "taker": "0x0000000000000000000000000000000000000000",
      "tokenSetId": "list:0x09233d553058c2f42ba751c87816a8e9fae7ef10:0xcdb858ba0a733e28aac55638d096f193f74e194b7c658a6130e880bf6c1708bd",
      "tokenSetSchemaHash": "0x015f68bbe86f68f17eb2b30d55d54e652fafd29cef6f90df2bd219dd8da10a1f",
      "updatedAt": "2022-12-12T23:19:53.398Z",
      "validFrom": 1670887192,
      "validUntil": 1670888879,
    },
    "lastSale": {
      "amount": "1",
      "batchIndex": 1,
      "block": 15831285,
      "fillSource": "opensea.io",
      "from": "0xabbadad51a9da48da2da78b871371eecd85e9c8a",
      "id": "e61863142c4595946233f2c3d0dd3c50ffe112dc45150de63ddb8b70ed32212a",
      "logIndex": 245,
      "orderId": "0xcadf4b8d656897ce46994b1a9cb17f3b6a5e288d1bb81cb9c17e5b8d8a79d826",
      "orderKind": "seaport",
      "orderSide": "ask",
      "orderSource": "opensea.io",
      "price": {
        "amount": {
          "decimal": 1.35,
          "native": 1.35,
          "raw": "1350000000000000000",
          "usd": 1973.76607,
        },
        "currency": {
          "contract": "0x0000000000000000000000000000000000000000",
          "decimals": 18,
          "name": "Ether",
          "symbol": "ETH",
        },
      },
      "saleId": "3299d5375318a2bfbc9cc8505252d834052dfc38bd9b992e08c0e1e87cff601d",
      "timestamp": 1666775735,
      "to": "0x5ce5b3cf78831dbbd1f63aabcb1757640ec6f84e",
      "token": {
        "collection": {
          "id": null,
          "name": null,
        },
        "contract": "0x09233d553058c2f42ba751c87816a8e9fae7ef10",
        "image": null,
        "name": null,
        "tokenId": "4329",
      },
      "txHash": "0xf52e8ca0d6eafbcbc901879f85d1adaa77a5bafb216f8645388af212ed700710",
      "washTradingScore": 0,
    },
    "lowestListing": {
      "contract": "0x09233d553058c2f42ba751c87816a8e9fae7ef10",
      "createdAt": "2022-12-12T04:27:51.630Z",
      "criteria": {
        "data": {
          "token": {
            "tokenId": "4329",
          },
        },
        "kind": "token",
      },
      "expiration": 1671078336,
      "feeBps": 1000,
      "feeBreakdown": [
        {
          "bps": 250,
          "kind": "marketplace",
          "recipient": "0x0000a26b00c1f0df003000390027140000faa719",
        },
        {
          "bps": 750,
          "kind": "royalty",
          "recipient": "0x9a7a0670a66a6efe1a15b97f3dc0f8f47d7b11c3",
        },
      ],
      "id": "0x4e80604d407546ad13b64c57c84af20f7bf97703eabf248e89a3d23a0e6d05d9",
      "isDynamic": false,
      "isReservoir": null,
      "kind": "seaport",
      "maker": "0x5ce5b3cf78831dbbd1f63aabcb1757640ec6f84e",
      "price": {
        "amount": {
          "decimal": 1.83,
          "native": 1.83,
          "raw": "1830000000000000000",
          "usd": 2313.70191,
        },
        "currency": {
          "contract": "0x0000000000000000000000000000000000000000",
          "decimals": 18,
          "name": "Ether",
          "symbol": "ETH",
        },
        "netAmount": {
          "decimal": 1.647,
          "native": 1.647,
          "raw": "1647000000000000000",
          "usd": 2082.33172,
        },
      },
      "quantityFilled": 0,
      "quantityRemaining": 1,
      "side": "sell",
      "source": {
        "domain": "opensea.io",
        "icon": "https://raw.githubusercontent.com/reservoirprotocol/indexer/v5/src/models/sources/opensea-logo.svg",
        "id": "0x5b3256965e7c3cf26e11fcaf296dfc8807c01073",
        "name": "OpenSea",
        "url": "https://opensea.io/assets/0x09233d553058c2f42ba751c87816a8e9fae7ef10/4329",
      },
      "status": "active",
      "taker": "0x0000000000000000000000000000000000000000",
      "tokenSetId": "token:0x09233d553058c2f42ba751c87816a8e9fae7ef10:4329",
      "tokenSetSchemaHash": "0x0000000000000000000000000000000000000000000000000000000000000000",
      "updatedAt": "2022-12-12T04:28:24.337Z",
      "validFrom": 1670819136,
      "validUntil": 1671078336,
    },
    "metadata": {
      "attributes": [
        {
          "floorAskPrice": 1,
          "key": "Faction",
          "onSaleCount": 29,
          "tokenCount": 750,
          "topBidValue": 0.78354,
          "value": "Mutant",
        },
        {
          "floorAskPrice": 1.449,
          "key": "Face",
          "onSaleCount": 11,
          "tokenCount": 369,
          "topBidValue": null,
          "value": "Mutant Ghoul Eyes",
        },
        {
          "floorAskPrice": 1,
          "key": "Fur",
          "onSaleCount": 4,
          "tokenCount": 53,
          "topBidValue": null,
          "value": "Mutant Lizard Blue",
        },
        {
          "floorAskPrice": 0.95,
          "key": "Top",
          "onSaleCount": 6,
          "tokenCount": 109,
          "topBidValue": null,
          "value": "Half Shaved Pink",
        },
        {
          "floorAskPrice": 0.85294,
          "key": "Item",
          "onSaleCount": 7,
          "tokenCount": 215,
          "topBidValue": null,
          "value": "Molotov Cocktail",
        },
        {
          "floorAskPrice": 1,
          "key": "Shirt",
          "onSaleCount": 2,
          "tokenCount": 68,
          "topBidValue": null,
          "value": "Torn Tee Gray",
        },
        {
          "floorAskPrice": 0.96,
          "key": "S-Karrots",
          "onSaleCount": 35,
          "tokenCount": 414,
          "topBidValue": null,
          "value": "69.0005",
        },
      ],
      "collection": {
        "id": "0x09233d553058c2f42ba751c87816a8e9fae7ef10",
        "image": "https://api.reservoir.tools/assets/v1?asset=d13dd00e722beffaf6c818fc35b7e75ab75ea521e56b725f6354a77f477a3577a6b742d4319547f1f0b158eb1314308596276f4a31265f9e04ce9b5f6965361db3cbd2eeab17695082fbf5d84540b84340b29639481234eb667bfb13d03fb761bac2229c3ad78b1c9907775e4b5031fdb1af3bc13009630636f6e4da62323c9423c5e4198f99eda3f3b783c3322e8c56",
        "name": "My Pet Hooligan",
        "slug": "mypethooligan",
      },
      "contract": "0x09233d553058c2f42ba751c87816a8e9fae7ef10",
      "description": "Official Store At [mypethooligan.com](https://mypethooligan.com/).",
      "image": "https://api.reservoir.tools/assets/v1?asset=d13dd00e722beffaf6c818fc35b7e75a3c937d6bb5dc7783372c8094ac3285354e1dda0070515ce1db4ff50af6950027865701a0caa91011bd901eb1c8d681a1d40aa035fb40e391032ac74b9d7e48ff0e71781b564b6dcf4637744ec75e86f0ded6abe83038c662adf1a4819794081eec5863396e4b61ca54136b6180e4a48be1c36adca3539e5ec9b326e73d154fcd9d90547028f7a3eab3abf92c17a43f5a",
      "isFlagged": false,
      "kind": "erc721",
      "lastBuy": {
        "timestamp": null,
        "value": null,
      },
      "lastFlagChange": null,
      "lastFlagUpdate": "2022-11-28T05:33:59.594Z",
      "lastSell": {
        "timestamp": 1666775735,
        "value": 1.35,
      },
      "media": null,
      "name": "Hooligan #4329",
      "owner": "0x5ce5b3cf78831dbbd1f63aabcb1757640ec6f84e",
      "rarity": 1159.031,
      "rarityRank": 854,
      "tokenId": "4329",
    },
    "tokenId": 4329,
  },
  {
    "contractAddress": "0x231d3559aa848bf10366fb9868590f01d34bf240",
    "currentOwner": {
      "owners": [
        {
          "address": "0x0ee7c9ca9a5c553bbb65a12c73cf4b5da39b609d",
          "ownership": {
            "floorAskPrice": null,
            "onSaleCount": "0",
            "tokenCount": "1",
            "topBidValue": null,
            "totalBidValue": null,
          },
        },
      ],
    },
    "highestBid": {
      "contract": "0x231d3559aa848bf10366fb9868590f01d34bf240",
      "createdAt": "2022-12-12T23:21:06.087Z",
      "criteria": {
        "data": {
          "token": {
            "tokenId": "8895",
          },
        },
        "kind": "token",
      },
      "expiration": 1670889013,
      "feeBps": 750,
      "feeBreakdown": [
        {
          "bps": 250,
          "kind": "marketplace",
          "recipient": "0x0000a26b00c1f0df003000390027140000faa719",
        },
        {
          "bps": 500,
          "kind": "royalty",
          "recipient": "0xff59b4b3d52728f78020414c720164a17c08f499",
        },
      ],
      "id": "0xde74ef4d7e04154ef78428df2f942f140a336a4523e2081ee799a13f9b039bd7",
      "isReservoir": null,
      "kind": "seaport",
      "maker": "0x6857229e66a09c86e69f947e198d2f9a669178a7",
      "price": {
        "amount": {
          "decimal": 1.2876,
          "native": 1.2876,
          "raw": "1287600000000000000",
          "usd": 1630.24751,
        },
        "currency": {
          "contract": "0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2",
          "decimals": 18,
          "name": "Wrapped Ether",
          "symbol": "WETH",
        },
        "netAmount": {
          "decimal": 1.19103,
          "native": 1.19103,
          "raw": "1191030000000000000",
          "usd": 1507.97895,
        },
      },
      "quantityFilled": 0,
      "quantityRemaining": 1,
      "side": "buy",
      "source": {
        "domain": "opensea.io",
        "icon": "https://raw.githubusercontent.com/reservoirprotocol/indexer/v5/src/models/sources/opensea-logo.svg",
        "id": "0x5b3256965e7c3cf26e11fcaf296dfc8807c01073",
        "name": "OpenSea",
        "url": "https://opensea.io/assets/0x231d3559aa848bf10366fb9868590f01d34bf240/8895",
      },
      "status": "active",
      "taker": "0x0000000000000000000000000000000000000000",
      "tokenSetId": "token:0x231d3559aa848bf10366fb9868590f01d34bf240:8895",
      "tokenSetSchemaHash": "0x0000000000000000000000000000000000000000000000000000000000000000",
      "updatedAt": "2022-12-12T23:21:06.087Z",
      "validFrom": 1670887264,
      "validUntil": 1670889013,
    },
    "lastSale": {
      "amount": "1",
      "batchIndex": 1,
      "block": 16135827,
      "fillSource": "gem.xyz",
      "from": "0xa77615d23694093a53204e16f2b9194253be8c0b",
      "id": "6c4a18e99aad235c902227c1e224bda0f20c3d3617d3bd212808f8627e93b805",
      "logIndex": 167,
      "orderId": "0x5d94e76a0ec41b7718afca0907a430d6c4a9dbe53ba64d90a9019cd31c1b339b",
      "orderKind": "seaport",
      "orderSide": "ask",
      "orderSource": "opensea.io",
      "price": {
        "amount": {
          "decimal": 0.82,
          "native": 0.82,
          "raw": "820000000000000000",
          "usd": 1042.98709,
        },
        "currency": {
          "contract": "0x0000000000000000000000000000000000000000",
          "decimals": 18,
          "name": "Ether",
          "symbol": "ETH",
        },
      },
      "saleId": "622262dc38bcad704af14e342d9c8ea4035ed258fcdb8613ca70c9607e399e64",
      "timestamp": 1670452283,
      "to": "0x0ee7c9ca9a5c553bbb65a12c73cf4b5da39b609d",
      "token": {
        "collection": {
          "id": null,
          "name": null,
        },
        "contract": "0x231d3559aa848bf10366fb9868590f01d34bf240",
        "image": null,
        "name": null,
        "tokenId": "8895",
      },
      "txHash": "0xcb8cb48edc4e751bf46a076c1f180c0b9dafefde101ec526ed9d00611816e900",
      "washTradingScore": 0,
    },
    "lowestListing": undefined,
    "metadata": {
      "attributes": [
        {
          "floorAskPrice": 0.8999,
          "key": "Type",
          "onSaleCount": 1055,
          "tokenCount": 7651,
          "topBidValue": null,
          "value": "Human",
        },
        {
          "floorAskPrice": 0.924,
          "key": "Background",
          "onSaleCount": 239,
          "tokenCount": 1658,
          "topBidValue": null,
          "value": "Warm Gray",
        },
        {
          "floorAskPrice": 0.96,
          "key": "Eye",
          "onSaleCount": 107,
          "tokenCount": 765,
          "topBidValue": null,
          "value": "Shaved Brow",
        },
        {
          "floorAskPrice": 1.2,
          "key": "Hair",
          "onSaleCount": 10,
          "tokenCount": 109,
          "topBidValue": null,
          "value": "White Spiky Undercut",
        },
        {
          "floorAskPrice": 0.98,
          "key": "Primary",
          "onSaleCount": 12,
          "tokenCount": 108,
          "topBidValue": null,
          "value": "Obsidian SMG",
        },
        {
          "floorAskPrice": 0.94,
          "key": "Mouth",
          "onSaleCount": 97,
          "tokenCount": 724,
          "topBidValue": null,
          "value": "Smoking",
        },
        {
          "floorAskPrice": 2,
          "key": "Aura",
          "onSaleCount": 14,
          "tokenCount": 58,
          "topBidValue": null,
          "value": "Ember",
        },
        {
          "floorAskPrice": 1.17,
          "key": "Clothes",
          "onSaleCount": 11,
          "tokenCount": 61,
          "topBidValue": null,
          "value": "Brown Blazer",
        },
      ],
      "collection": {
        "id": "0x231d3559aa848bf10366fb9868590f01d34bf240",
        "image": "https://api.reservoir.tools/assets/v1?asset=d13dd00e722beffaf6c818fc35b7e75a5181a7b938b25840aecba9bf5f5a04d974a225a20d59f6585c2f0d7a071b1eece595d9c3ae76006f73d6bebb42d13045ea4ed5a4d740f5709928267c775f4eff2573e7e40288fee9530d283ebd0a413d",
        "name": "Valhalla",
        "slug": "valhalla",
      },
      "contract": "0x231d3559aa848bf10366fb9868590f01d34bf240",
      "description": null,
      "image": "https://api.reservoir.tools/assets/v1?asset=d13dd00e722beffaf6c818fc35b7e75a707ebe9eccffa3b57977327875f3a463e19987b48bc84120eae1b0329dd6b5ef0be7a140858b38961043ccf15b38c3a63d9453742fb472448cd4d1bd6a8c8302c3f2b8e64c41c1585dc7ff16df8455ba9a03335a82124e6bcacf3cd2099f021ee30810ff0622d9fdcda903d56063a23ae1c36adca3539e5ec9b326e73d154fcd9d90547028f7a3eab3abf92c17a43f5a",
      "isFlagged": false,
      "kind": "erc721",
      "lastBuy": {
        "timestamp": null,
        "value": null,
      },
      "lastFlagChange": null,
      "lastFlagUpdate": "2022-12-12T19:12:50.595Z",
      "lastSell": {
        "timestamp": 1670452283,
        "value": 0.82,
      },
      "media": null,
      "name": "Valhalla #8895",
      "owner": "0x0ee7c9ca9a5c553bbb65a12c73cf4b5da39b609d",
      "rarity": 546.216,
      "rarityRank": 998,
      "tokenId": "8895",
    },
    "tokenId": 8895,
  },
]
`;

exports[`ResevoirService should be able to get listings for tokens 1`] = `
{
  "0x09233d553058c2F42ba751C87816a8E9FaE7Ef10:4329": {
    "contract": "0x09233d553058c2f42ba751c87816a8e9fae7ef10",
    "createdAt": "2022-12-12T04:27:51.630Z",
    "criteria": {
      "data": {
        "token": {
          "tokenId": "4329",
        },
      },
      "kind": "token",
    },
    "expiration": 1671078336,
    "feeBps": 1000,
    "feeBreakdown": [
      {
        "bps": 250,
        "kind": "marketplace",
        "recipient": "0x0000a26b00c1f0df003000390027140000faa719",
      },
      {
        "bps": 750,
        "kind": "royalty",
        "recipient": "0x9a7a0670a66a6efe1a15b97f3dc0f8f47d7b11c3",
      },
    ],
    "id": "0x4e80604d407546ad13b64c57c84af20f7bf97703eabf248e89a3d23a0e6d05d9",
    "isDynamic": false,
    "isReservoir": null,
    "kind": "seaport",
    "maker": "0x5ce5b3cf78831dbbd1f63aabcb1757640ec6f84e",
    "price": {
      "amount": {
        "decimal": 1.83,
        "native": 1.83,
        "raw": "1830000000000000000",
        "usd": 2313.70191,
      },
      "currency": {
        "contract": "0x0000000000000000000000000000000000000000",
        "decimals": 18,
        "name": "Ether",
        "symbol": "ETH",
      },
      "netAmount": {
        "decimal": 1.647,
        "native": 1.647,
        "raw": "1647000000000000000",
        "usd": 2082.33172,
      },
    },
    "quantityFilled": 0,
    "quantityRemaining": 1,
    "side": "sell",
    "source": {
      "domain": "opensea.io",
      "icon": "https://raw.githubusercontent.com/reservoirprotocol/indexer/v5/src/models/sources/opensea-logo.svg",
      "id": "0x5b3256965e7c3cf26e11fcaf296dfc8807c01073",
      "name": "OpenSea",
      "url": "https://opensea.io/assets/0x09233d553058c2f42ba751c87816a8e9fae7ef10/4329",
    },
    "status": "active",
    "taker": "0x0000000000000000000000000000000000000000",
    "tokenSetId": "token:0x09233d553058c2f42ba751c87816a8e9fae7ef10:4329",
    "tokenSetSchemaHash": "0x0000000000000000000000000000000000000000000000000000000000000000",
    "updatedAt": "2022-12-12T04:28:24.337Z",
    "validFrom": 1670819136,
    "validUntil": 1671078336,
  },
  "0x231d3559aa848bf10366fb9868590f01d34bf240:8895": undefined,
  "0xBC4CA0EdA7647A8aB7C2061c2E118A18a936f13D:1860": undefined,
}
`;

exports[`ResevoirService should be able to get metadata for tokens 1`] = `
{
  "0x09233d553058c2F42ba751C87816a8E9FaE7Ef10:4329": {
    "attributes": [
      {
        "floorAskPrice": 1,
        "key": "Faction",
        "onSaleCount": 29,
        "tokenCount": 750,
        "topBidValue": 0.78354,
        "value": "Mutant",
      },
      {
        "floorAskPrice": 1.449,
        "key": "Face",
        "onSaleCount": 11,
        "tokenCount": 369,
        "topBidValue": null,
        "value": "Mutant Ghoul Eyes",
      },
      {
        "floorAskPrice": 1,
        "key": "Fur",
        "onSaleCount": 4,
        "tokenCount": 53,
        "topBidValue": null,
        "value": "Mutant Lizard Blue",
      },
      {
        "floorAskPrice": 0.95,
        "key": "Top",
        "onSaleCount": 6,
        "tokenCount": 109,
        "topBidValue": null,
        "value": "Half Shaved Pink",
      },
      {
        "floorAskPrice": 0.85294,
        "key": "Item",
        "onSaleCount": 7,
        "tokenCount": 215,
        "topBidValue": null,
        "value": "Molotov Cocktail",
      },
      {
        "floorAskPrice": 1,
        "key": "Shirt",
        "onSaleCount": 2,
        "tokenCount": 68,
        "topBidValue": null,
        "value": "Torn Tee Gray",
      },
      {
        "floorAskPrice": 0.96,
        "key": "S-Karrots",
        "onSaleCount": 35,
        "tokenCount": 414,
        "topBidValue": null,
        "value": "69.0005",
      },
    ],
    "collection": {
      "id": "0x09233d553058c2f42ba751c87816a8e9fae7ef10",
      "image": "https://api.reservoir.tools/assets/v1?asset=d13dd00e722beffaf6c818fc35b7e75ab75ea521e56b725f6354a77f477a3577a6b742d4319547f1f0b158eb1314308596276f4a31265f9e04ce9b5f6965361db3cbd2eeab17695082fbf5d84540b84340b29639481234eb667bfb13d03fb761bac2229c3ad78b1c9907775e4b5031fdb1af3bc13009630636f6e4da62323c9423c5e4198f99eda3f3b783c3322e8c56",
      "name": "My Pet Hooligan",
      "slug": "mypethooligan",
    },
    "contract": "0x09233d553058c2f42ba751c87816a8e9fae7ef10",
    "description": "Official Store At [mypethooligan.com](https://mypethooligan.com/).",
    "image": "https://api.reservoir.tools/assets/v1?asset=d13dd00e722beffaf6c818fc35b7e75a3c937d6bb5dc7783372c8094ac3285354e1dda0070515ce1db4ff50af6950027865701a0caa91011bd901eb1c8d681a1d40aa035fb40e391032ac74b9d7e48ff0e71781b564b6dcf4637744ec75e86f0ded6abe83038c662adf1a4819794081eec5863396e4b61ca54136b6180e4a48be1c36adca3539e5ec9b326e73d154fcd9d90547028f7a3eab3abf92c17a43f5a",
    "isFlagged": false,
    "kind": "erc721",
    "lastBuy": {
      "timestamp": null,
      "value": null,
    },
    "lastFlagChange": null,
    "lastFlagUpdate": "2022-11-28T05:33:59.594Z",
    "lastSell": {
      "timestamp": 1666775735,
      "value": 1.35,
    },
    "media": null,
    "name": "Hooligan #4329",
    "owner": "0x5ce5b3cf78831dbbd1f63aabcb1757640ec6f84e",
    "rarity": 1159.031,
    "rarityRank": 854,
    "tokenId": "4329",
  },
  "0x231d3559aa848bf10366fb9868590f01d34bf240:8895": {
    "attributes": [
      {
        "floorAskPrice": 0.8999,
        "key": "Type",
        "onSaleCount": 1055,
        "tokenCount": 7651,
        "topBidValue": null,
        "value": "Human",
      },
      {
        "floorAskPrice": 0.924,
        "key": "Background",
        "onSaleCount": 239,
        "tokenCount": 1658,
        "topBidValue": null,
        "value": "Warm Gray",
      },
      {
        "floorAskPrice": 0.96,
        "key": "Eye",
        "onSaleCount": 107,
        "tokenCount": 765,
        "topBidValue": null,
        "value": "Shaved Brow",
      },
      {
        "floorAskPrice": 1.2,
        "key": "Hair",
        "onSaleCount": 10,
        "tokenCount": 109,
        "topBidValue": null,
        "value": "White Spiky Undercut",
      },
      {
        "floorAskPrice": 0.98,
        "key": "Primary",
        "onSaleCount": 12,
        "tokenCount": 108,
        "topBidValue": null,
        "value": "Obsidian SMG",
      },
      {
        "floorAskPrice": 0.94,
        "key": "Mouth",
        "onSaleCount": 97,
        "tokenCount": 724,
        "topBidValue": null,
        "value": "Smoking",
      },
      {
        "floorAskPrice": 2,
        "key": "Aura",
        "onSaleCount": 14,
        "tokenCount": 58,
        "topBidValue": null,
        "value": "Ember",
      },
      {
        "floorAskPrice": 1.17,
        "key": "Clothes",
        "onSaleCount": 11,
        "tokenCount": 61,
        "topBidValue": null,
        "value": "Brown Blazer",
      },
    ],
    "collection": {
      "id": "0x231d3559aa848bf10366fb9868590f01d34bf240",
      "image": "https://api.reservoir.tools/assets/v1?asset=d13dd00e722beffaf6c818fc35b7e75a5181a7b938b25840aecba9bf5f5a04d974a225a20d59f6585c2f0d7a071b1eece595d9c3ae76006f73d6bebb42d13045ea4ed5a4d740f5709928267c775f4eff2573e7e40288fee9530d283ebd0a413d",
      "name": "Valhalla",
      "slug": "valhalla",
    },
    "contract": "0x231d3559aa848bf10366fb9868590f01d34bf240",
    "description": null,
    "image": "https://api.reservoir.tools/assets/v1?asset=d13dd00e722beffaf6c818fc35b7e75a707ebe9eccffa3b57977327875f3a463e19987b48bc84120eae1b0329dd6b5ef0be7a140858b38961043ccf15b38c3a63d9453742fb472448cd4d1bd6a8c8302c3f2b8e64c41c1585dc7ff16df8455ba9a03335a82124e6bcacf3cd2099f021ee30810ff0622d9fdcda903d56063a23ae1c36adca3539e5ec9b326e73d154fcd9d90547028f7a3eab3abf92c17a43f5a",
    "isFlagged": false,
    "kind": "erc721",
    "lastBuy": {
      "timestamp": null,
      "value": null,
    },
    "lastFlagChange": null,
    "lastFlagUpdate": "2022-12-12T19:12:50.595Z",
    "lastSell": {
      "timestamp": 1670452283,
      "value": 0.82,
    },
    "media": null,
    "name": "Valhalla #8895",
    "owner": "0x0ee7c9ca9a5c553bbb65a12c73cf4b5da39b609d",
    "rarity": 546.216,
    "rarityRank": 998,
    "tokenId": "8895",
  },
  "0xBC4CA0EdA7647A8aB7C2061c2E118A18a936f13D:1860": {
    "attributes": [
      {
        "floorAskPrice": 67.8469,
        "key": "Background",
        "onSaleCount": 69,
        "tokenCount": 1243,
        "topBidValue": null,
        "value": "Army Green",
      },
      {
        "floorAskPrice": 67.89,
        "key": "Mouth",
        "onSaleCount": 30,
        "tokenCount": 505,
        "topBidValue": null,
        "value": "Dumbfounded",
      },
      {
        "floorAskPrice": 72.8867,
        "key": "Eyes",
        "onSaleCount": 14,
        "tokenCount": 333,
        "topBidValue": null,
        "value": "Eyepatch",
      },
      {
        "floorAskPrice": 67.89,
        "key": "Fur",
        "onSaleCount": 37,
        "tokenCount": 636,
        "topBidValue": null,
        "value": "Cream",
      },
      {
        "floorAskPrice": 250,
        "key": "Hat",
        "onSaleCount": 2,
        "tokenCount": 65,
        "topBidValue": 73.625,
        "value": "Trippy Captain's Hat",
      },
      {
        "floorAskPrice": 67.89,
        "key": "Trait Count",
        "onSaleCount": 149,
        "tokenCount": 2540,
        "topBidValue": null,
        "value": "5",
      },
    ],
    "collection": {
      "id": "0xbc4ca0eda7647a8ab7c2061c2e118a18a936f13d",
      "image": "https://api.reservoir.tools/assets/v1?asset=d13dd00e722beffaf6c818fc35b7e75aba548cc4b935f736af3635e348b6a2d9c8f5ecb91749e3d0db1afe2c564e23f79f112c4d443d8512b276961756757bf042663729dcf833bdef4bc2ebbba9a1f6449356a2812f60ca5cd147e3968cdb26da731b785da2bddddc77ccd728e7e17367dd1418d4f7468049b3d378d0243c55058ed9feecb44e991ea6b299d1f7ae6c",
      "name": "Bored Ape Yacht Club",
      "slug": "boredapeyachtclub",
    },
    "contract": "0xbc4ca0eda7647a8ab7c2061c2e118a18a936f13d",
    "description": null,
    "image": "https://api.reservoir.tools/assets/v1?asset=d13dd00e722beffaf6c818fc35b7e75a802539bb38ece5cdd75ce66c0789f858428e72bdf08ebf6bb989d44c9daff0dc1bc517ecd4c3acb0db26c105ced189c018d8bcc709fac46ee4d01882be3bdce6b942e393ff65e45bb0673e3ee39e3fa1dc8a64b7c687b804fa236be756880b3cc0693ae6a55db45876142e68063a670423c5e4198f99eda3f3b783c3322e8c56",
    "isFlagged": false,
    "kind": "erc721",
    "lastBuy": {
      "timestamp": null,
      "value": null,
    },
    "lastFlagChange": null,
    "lastFlagUpdate": "2022-12-12T19:34:10.581Z",
    "lastSell": {
      "timestamp": null,
      "value": null,
    },
    "media": null,
    "name": null,
    "owner": "0x8ad272ac86c6c88683d9a60eb8ed57e6c304bb0c",
    "rarity": 75.195,
    "rarityRank": 2356,
    "tokenId": "1860",
  },
}
`;

exports[`ResevoirService should be able to get offers/bids for tokens 1`] = `
{
  "0x09233d553058c2F42ba751C87816a8E9FaE7Ef10:4329": {
    "contract": "0x09233d553058c2f42ba751c87816a8e9fae7ef10",
    "createdAt": "2022-12-12T23:19:53.398Z",
    "criteria": {
      "data": {
        "attribute": {
          "key": "Faction",
          "value": "Mutant",
        },
        "collection": {
          "id": "0x09233d553058c2f42ba751c87816a8e9fae7ef10",
        },
      },
      "kind": "attribute",
    },
    "expiration": 1670888879,
    "feeBps": 1000,
    "feeBreakdown": [
      {
        "bps": 250,
        "kind": "marketplace",
        "recipient": "0x0000a26b00c1f0df003000390027140000faa719",
      },
      {
        "bps": 750,
        "kind": "royalty",
        "recipient": "0x9a7a0670a66a6efe1a15b97f3dc0f8f47d7b11c3",
      },
    ],
    "id": "0x1d5979b92b7fa0c8687a6cc2a112413a41631dc7f552e551a70f16569f3ed5ad",
    "isReservoir": null,
    "kind": "seaport",
    "maker": "0xe4c7cdd3f630404f8dbdcb2ef7bf4f22291e7697",
    "price": {
      "amount": {
        "decimal": 0.8706,
        "native": 0.8706,
        "raw": "870600000000000000",
        "usd": 1102.27826,
      },
      "currency": {
        "contract": "0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2",
        "decimals": 18,
        "name": "Wrapped Ether",
        "symbol": "WETH",
      },
      "netAmount": {
        "decimal": 0.78354,
        "native": 0.78354,
        "raw": "783540000000000000",
        "usd": 992.05043,
      },
    },
    "quantityFilled": 0,
    "quantityRemaining": 1,
    "side": "buy",
    "source": {
      "domain": "opensea.io",
      "icon": "https://raw.githubusercontent.com/reservoirprotocol/indexer/v5/src/models/sources/opensea-logo.svg",
      "id": "0x5b3256965e7c3cf26e11fcaf296dfc8807c01073",
      "name": "OpenSea",
      "url": "https://opensea.io/assets/0x09233d553058c2f42ba751c87816a8e9fae7ef10/4329",
    },
    "status": "active",
    "taker": "0x0000000000000000000000000000000000000000",
    "tokenSetId": "list:0x09233d553058c2f42ba751c87816a8e9fae7ef10:0xcdb858ba0a733e28aac55638d096f193f74e194b7c658a6130e880bf6c1708bd",
    "tokenSetSchemaHash": "0x015f68bbe86f68f17eb2b30d55d54e652fafd29cef6f90df2bd219dd8da10a1f",
    "updatedAt": "2022-12-12T23:19:53.398Z",
    "validFrom": 1670887192,
    "validUntil": 1670888879,
  },
  "0x231d3559aa848bf10366fb9868590f01d34bf240:8895": {
    "contract": "0x231d3559aa848bf10366fb9868590f01d34bf240",
    "createdAt": "2022-12-12T23:21:06.087Z",
    "criteria": {
      "data": {
        "token": {
          "tokenId": "8895",
        },
      },
      "kind": "token",
    },
    "expiration": 1670889013,
    "feeBps": 750,
    "feeBreakdown": [
      {
        "bps": 250,
        "kind": "marketplace",
        "recipient": "0x0000a26b00c1f0df003000390027140000faa719",
      },
      {
        "bps": 500,
        "kind": "royalty",
        "recipient": "0xff59b4b3d52728f78020414c720164a17c08f499",
      },
    ],
    "id": "0xde74ef4d7e04154ef78428df2f942f140a336a4523e2081ee799a13f9b039bd7",
    "isReservoir": null,
    "kind": "seaport",
    "maker": "0x6857229e66a09c86e69f947e198d2f9a669178a7",
    "price": {
      "amount": {
        "decimal": 1.2876,
        "native": 1.2876,
        "raw": "1287600000000000000",
        "usd": 1630.24751,
      },
      "currency": {
        "contract": "0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2",
        "decimals": 18,
        "name": "Wrapped Ether",
        "symbol": "WETH",
      },
      "netAmount": {
        "decimal": 1.19103,
        "native": 1.19103,
        "raw": "1191030000000000000",
        "usd": 1507.97895,
      },
    },
    "quantityFilled": 0,
    "quantityRemaining": 1,
    "side": "buy",
    "source": {
      "domain": "opensea.io",
      "icon": "https://raw.githubusercontent.com/reservoirprotocol/indexer/v5/src/models/sources/opensea-logo.svg",
      "id": "0x5b3256965e7c3cf26e11fcaf296dfc8807c01073",
      "name": "OpenSea",
      "url": "https://opensea.io/assets/0x231d3559aa848bf10366fb9868590f01d34bf240/8895",
    },
    "status": "active",
    "taker": "0x0000000000000000000000000000000000000000",
    "tokenSetId": "token:0x231d3559aa848bf10366fb9868590f01d34bf240:8895",
    "tokenSetSchemaHash": "0x0000000000000000000000000000000000000000000000000000000000000000",
    "updatedAt": "2022-12-12T23:21:06.087Z",
    "validFrom": 1670887264,
    "validUntil": 1670889013,
  },
  "0xBC4CA0EdA7647A8aB7C2061c2E118A18a936f13D:1860": {
    "contract": "0xbc4ca0eda7647a8ab7c2061c2e118a18a936f13d",
    "createdAt": "2022-12-12T16:17:22.130Z",
    "criteria": {
      "data": {
        "attribute": {
          "key": "Hat",
          "value": "Trippy Captain's Hat",
        },
        "collection": {
          "id": "0xbc4ca0eda7647a8ab7c2061c2e118a18a936f13d",
        },
      },
      "kind": "attribute",
    },
    "expiration": 1670907540,
    "feeBps": 500,
    "feeBreakdown": [
      {
        "bps": 250,
        "kind": "marketplace",
        "recipient": "0x0000a26b00c1f0df003000390027140000faa719",
      },
      {
        "bps": 250,
        "kind": "royalty",
        "recipient": "0xa858ddc0445d8131dac4d1de01f834ffcba52ef1",
      },
    ],
    "id": "0xe0ad14e5b1c7458691b4ff367af42dba79aabb490a61d9f43391871a443c91f4",
    "isReservoir": null,
    "kind": "seaport",
    "maker": "0xd87051c7b10ea48da69f91395419774572cc197b",
    "price": {
      "amount": {
        "decimal": 77.5,
        "native": 77.5,
        "raw": "77500001000000000000",
        "usd": 98123.78357,
      },
      "currency": {
        "contract": "0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2",
        "decimals": 18,
        "name": "Wrapped Ether",
        "symbol": "WETH",
      },
      "netAmount": {
        "decimal": 73.625,
        "native": 73.625,
        "raw": "73625000950000000000",
        "usd": 93217.59439,
      },
    },
    "quantityFilled": 0,
    "quantityRemaining": 1,
    "side": "buy",
    "source": {
      "domain": "opensea.io",
      "icon": "https://raw.githubusercontent.com/reservoirprotocol/indexer/v5/src/models/sources/opensea-logo.svg",
      "id": "0x5b3256965e7c3cf26e11fcaf296dfc8807c01073",
      "name": "OpenSea",
      "url": "https://opensea.io/assets/0xbc4ca0eda7647a8ab7c2061c2e118a18a936f13d/1860",
    },
    "status": "active",
    "taker": "0x0000000000000000000000000000000000000000",
    "tokenSetId": "list:0xbc4ca0eda7647a8ab7c2061c2e118a18a936f13d:0x3d6a1badc01618042d2de564484f828203403ee62cb3b17f9aeb0b5695e16db9",
    "tokenSetSchemaHash": "0x7d5bebc9bfbf42313d20ee45620b6dc2c11278b042b2ef2c20e5e20dbfa19f09",
    "updatedAt": "2022-12-12T16:17:22.130Z",
    "validFrom": 1670861841,
    "validUntil": 1670907540,
  },
}
`;
